Fix navbar subtitle flicker

--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -1,6 +1,7 @@
 .navbar {
     background-color: #191a1f !important;
-    padding: 1rem 0;
+    padding: 1rem 0rem;
+    margin-bottom: 1rem;
 }
 
 .navbar-brand {
@@ -29,7 +30,7 @@
 .navbar-nav .nav-active, .navbar-nav .nav-link.active {
     color: #f2f5ff !important;
     background-color: #007bff !important;
-    border-radius: .25rem;
+    border-radius: 0.25rem;
 }
 
 .navbar-brand img {
@@ -70,19 +71,21 @@
 }
 
 .navbar-subtitle {
-    white-space: normal; 
-    max-width: 70%; 
-    font-size: 0.7rem; 
+    color: #009dff !important;
+    white-space: normal;
+    max-width: 70%;
+    font-size: 0.7rem;
     font-weight: lighter;
-    line-height: 1.3;
-    transition: opacity 0.5s ease-in-out;
-    height: auto; 
-    overflow: hidden; 
+    line-height: 1.4;
+    transition: opacity 1.5s ease-in-out;
+    height: auto;
+    overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 2; 
     -webkit-box-orient: vertical;
-  }
-  
+    min-height: 40px; 
+    display: flex;
+}
+
 
 .navbar .container-fluid {
     padding-right: 1rem;
